fix vertical cards gap

--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ h1 {
 
 .vertical-cards {
   justify-content: center;
-  gap: 0 10px;
+  gap: 10px;
 }
 
 .card-vertical {
